<resources>
    <string name="app_name">OnlyShoot</string>
    <string name="add_fight">Add fight</string>
    <string name="edit_fight">Edit fight</string>
    <string name="add_squad">Add squad from fight</string>
    <string name="create_squad_from_sample">Create new from sample</string>
    <string name="edit_squad">Edit squad</string>
    <string name="add_unit">Add unit</string>
    <string name="edit_unit">Edit unit</string>
    <string name="attack_direction">Attack direction</string>
    <string name="attack_result">Attack result</string>
    <string name="fight_list">Fight list</string>
    <string name="select_squad">Select squad</string>
    <string name="load_attackers">Load attackers</string>
    <string name="load_defenders">Load defenders</string>
    <string name="hp_template">HP: %s</string>
    <string name="attack_template">Attack skill: %s</string>
    <string name="armor_penetration_log">Armor penetration: dices + modifier: %1$d + %2$s</string>
    <string name="attack_log_template">Attack (skill + modifiers): %s</string>
    <string name="weapon_template">Weapon: %s</string>
    <string name="no_data_for_attack">Add squads data before attack</string>
    <string name="save_fight">Enter the name for this fight, if you want to save it</string>
    <string name="add">Add</string>
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="remain_hp">remain hp: %d</string>
    <string name="save_squad_name">Save squad name</string>
    <string name="attack">Attack</string>
    <string name="name">Name</string>
    <string name="attack_skill_amount">Attack skill amount</string>
    <string name="attack_skill_modifier">Attack skill modifier</string>
    <string name="armor_penetration_amount">Armor penetration: amount of d10</string>
    <string name="armor_penetration_modifier">Armor penetration modifier</string>
    <string name="Defence">Defence</string>
    <string name="normal_armor">Normal</string>
    <string name="proof_armor">Proof</string>
    <string name="damage">Damage</string>
    <string name="damage_amount">damage: amount of d10</string>
    <string name="constant_damage_modifier">Constant damage modifier</string>
    <string name="damage_modifier">Damage modifier</string>
    <string name="hp_before_attack">HP before attack: %d</string>
    <string name="attack_dice">attack d100: %d</string>
    <string name="evasion_dice">evasion d100: %d</string>
    <string name="evasion_log_template">evasion (skill + modifiers): %d</string>
    <string name="temp_damage_modifier">Temp damage modifier</string>
    <string name="damage_type">Damage type</string>
    <string name="explosion">Explosion</string>
    <string name="cut">Cut</string>
    <string name="strike">Strike</string>
    <string name="energy">Energy</string>
    <string name="attack_amount">Attack amount</string>
    <string name="hp">HP</string>
    <string name="evasion">Evasion</string>
    <string name="evasion_skill_amount">Evasion skill amount</string>
    <string name="evasion_attack_amount">Reactions amount</string>
    <string name="misfire_possibility">Jamming lower threshold</string>
    <string name="critical_hit">Critical hit</string>
    <string name="critical_hit_ignorance">Critical hit ignorance</string>
    <string name="critical_hit_modifier">Critical hit modifier</string>
    <string name="righteous_anger">Righteous anger</string>
    <string name="righteous_anger_amount">Righteous anger amount</string>
    <string name="anger_default">10</string>
    <string name="can_use_anger">Can use anger</string>
    <string name="can_die_from_anger">Can die from anger</string>
    <string name="archetype">sample</string>
    <string name="add_archetype">Add sample</string>
    <string name="select_from_archetype">Select from samples</string>
    <string name="edit_archetype">Edit sample</string>
    <string name="random_attacks">Random attacks: %d</string>
    <string name="start_attack">Start attack</string>
    <string name="enter_attack_amount">Enter attack amount:</string>
    <string name="damage_text">Damage: <b>%d</b></string>
    <string name="affected_parts">Affected: %s</string>
    <string name="head">head</string>
    <string name="torso">torso</string>
    <string name="right_hand">right hand</string>
    <string name="left_hand">left hand</string>
    <string name="right_leg">right leg</string>
    <string name="left_leg">left leg</string>
    <string name="misfire">misfire</string>
    <string name="hit">hit</string>
    <string name="miss">miss</string>
    <string name="evasion_result">evasion</string>
    <string name="death">death</string>
    <string name="armor_save">saved by armor</string>
    <string name="energy_arm_1">The attack grazes the target’s arm, causing it to spasm uncontrollably. All Tests involving that arm suffer a
–30 penalty for 1d5 Rounds.</string>
    <string name="energy_arm_2">The attack smashes into the arm, sending currents of energy crackling down to the fingers and up to the
shoulder. The arm is useless for 1d5 Rounds and the target takes 1 level of Fatigue.</string>
    <string name="energy_arm_3">The arm suffers superficial burns inflicting no small amount of pain on the target. The target may only take a
Half Action in his next Round and he suffers 1d5 levels of Fatigue.</string>
    <string name="energy_arm_4">The shock of the attack causes the character to temporarily lose control of his autonomous functions. He is
Stunned for 1 Round and is knocked Prone. The arm is useless for 1d10 Rounds.</string>
    <string name="energy_arm_5">The attack causes energy to course through the target’s arm leaving him Stunned for 1 Round, and the arm is
useless until the target receives medical treatment.</string>
    <string name="energy_arm_6">The attack wreathes the arm in flame, scorching clothing and armour, and temporarily fusing together the
target’s fingers. The target suffers 1d5 Weapon Skill and Ballistic Skill Damage, suffers 1d5 levels of Fatigue,
and must make a Challenging (+0) Toughness Test or lose the use of the hand permanently.</string>
    <string name="energy_arm_7">With a terrible snapping sound, the heat of the attack boils the marrow in the target’s arm, causing it to crack
or even shatter. The target’s arm is broken and, until it is repaired, the target counts as only having one arm.
The target is Stunned for 1 Round and suffers 1d5 levels of Fatigue.</string>
    <string name="energy_arm_8">Energy ripples across the target’s arm, causing skin and muscle to slough disgustingly from the target’s limb, revealing
a sticky red mess of sinew and bone. The target must take a Challenging (+0) Toughness Test or become Stunned
for 1d5 Rounds. In addition, the target suffers 1d10 levels of Fatigue. The target now only has one arm.</string>
    <string name="energy_arm_9">Fire consumes the target’s arm, burning the flesh to a crisp right down to the bone. The target must make an
immediate Challenging (+0) Toughness Test or die from shock. If he survives, however, the target suffers
1d10 levels of Fatigue and is Stunned for 1 Round. The target now only has one arm.</string>
    <string name="energy_arm_10">The attack reduces the arm to a cloud of ash and sends the target crumbling to the ground where he
immediately dies from shock, clutching his smoking stump</string>
    <string name="energy_torso_1">A blow to the target’s body steals the air from his lungs. The target can take only a Half Action on his next Turn.</string>
    <string name="energy_torso_2">The blast punches the air from the target’s body. The target must make a Challenging (+0) Toughness
Test or be knocked Prone.</string>
    <string name="energy_torso_3">The attack cooks the flesh on the chest and abdomen, inflicting 2 levels of Fatigue and 1d5 Toughness Damage.</string>
    <string name="energy_torso_4">The energy ripples all over the character, scorching his body with horrid third-degree burns and inflicting
1d10 levels of Fatigue. The target may only take a Half Action on his next Round.</string>
    <string name="energy_torso_5">The fury of the attack forces the target to the ground, helplessly covering his face and keening in agony. The
target is knocked Prone and must make a Challenging (+0) Agility Test or catch fire (see Special Damage).
The Target must also make a Challenging (+0) Toughness Test or be Stunned for 1 Round.</string>
    <string name="energy_torso_6">Struck by the full force of the attack, the target is sent reeling to the ground; smoke spiralling out from
the wound. The target is knocked Prone, Stunned for 1d10 Rounds, and suffers 1d5 levels of Fatigue. In
addition, he must make a Challenging (+0) Agility Test or catch fire (see Special Damage on page 266).</string>
    <string name="energy_torso_7">The intense power of the energy attack cooks the target’s organs, burning his lungs and heart with intense
heat. The target is Stunned for 2d10 Rounds and suffers 1d10 permanent Toughness Damage.</string>
    <string name="energy_torso_8">As the attack washes over the target, his skin turns black and peels off while melted fat seeps from his clothing
and armour. The target is Stunned for 2d10 Rounds and the attack halves his Strength, Toughness and Agility
until he receives medical treatment. The extensive scarring deals 2d5 permanent Fellowship Damage.</string>
    <string name="energy_torso_9">The target is completely encased in fire, melting his skin and popping his eyes like superheated eggs. He falls
to the ground a blackened corpse.</string>
    <string name="energy_torso_10">The target is completely encased in fire, melting his skin and popping his eyes like superheated eggs. He falls
to the ground a blackened corpse. As above, except in addition, if the target is carrying any ammunition, there is a 50% chance it explodes.
Unless they can make a successful Evasion Test, all creatures within 1d5 metres take 1d10+5 Explosive
Damage. If the target carried any grenades or missiles, one Round after the Damage was dealt, they detonate
where the target’s body lies with the normal effects.</string>
    <string name="energy_head_1">A grazing blow to the head disorientates the target, imposing a –10 penalty to all Tests (except Toughness)
for 1 Round.</string>
    <string name="energy_head_2">The blast of energy dazzles the target, leaving him Blinded for 1 Round.</string>
    <string name="energy_head_3">The attack cooks off the target’s ear, leaving him with a partially burned stump of cartilage and deafened
until he receives first aid or waits for 1d5 hours.</string>
    <string name="energy_head_4">The energy attack burns away all of the hairs on the target’s head as well as leaving him reeling from the
injury. The attack deals 2 levels of Fatigue and the target is blinded for 1d5 Rounds.</string>
    <string name="energy_head_5">A blast of energy envelops the target’s head, burning his face and hair, crisping his skin, and causing him to
scream like a stuck Grox. In addition to losing his hair, he is blinded for 1d10 Rounds, Stunned for 1 Round,
and takes 1 permanent Fellowship Damage.</string>
    <string name="energy_head_6">The attack cooks the target’s face, melting his features and damaging his eyes. The target is blinded for the
next 1d10 hours and suffers 1d5 permanent Fellowship Damage and 1d5 permanent Perception Damage.
The target also suffers 1d5 levels of Fatigue.</string>
    <string name="default_misfire" translatable="false">96</string>
    <string name="attack_count">attack count: %d</string>
    <string name="squads">Squads</string>
    <string name="units">Units</string>
    <string name="fights">Fights</string>
</resources>