<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true"
        >
        <LinearLayout
            android:paddingStart="@dimen/content_offset"
            android:paddingEnd="@dimen/content_offset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                style="@style/CaptionFieldTheme"
                tools:text="text"
                android:inputType="textCapSentences"
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                tools:ignore="Autofill,LabelFor" />
            <TextView
                android:layout_marginBottom="@dimen/content_offset"
                android:layout_marginTop="@dimen/content_offset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextFieldTheme"
                android:text="@string/attack"/>
            <EditText
                style="@style/TextFieldTheme"
                android:inputType="numberDecimal"
                android:id="@+id/attack_skill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/attack_skill_amount"
                tools:ignore="Autofill,LabelFor" />
            <EditText
                style="@style/TextFieldTheme"
                android:inputType="numberDecimal"
                android:id="@+id/attack_modifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/attack_skill_modifier"
                tools:ignore="Autofill,LabelFor" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextFieldTheme"
                android:layout_marginBottom="@dimen/content_offset"
                android:layout_marginTop="@dimen/content_offset"
                android:text="@string/Defence"/>
            <EditText
                style="@style/TextFieldTheme"
                android:inputType="numberDecimal"
                android:id="@+id/normal_armor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/normal_armor"
                tools:ignore="Autofill,LabelFor" />
            <EditText
                style="@style/TextFieldTheme"
                android:inputType="numberDecimal"
                android:id="@+id/proof_armor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/proof_armor"
                tools:ignore="Autofill,LabelFor" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextFieldTheme"
                android:layout_marginBottom="@dimen/content_offset"
                android:layout_marginTop="@dimen/content_offset"
                android:text="@string/damage"/>
            <EditText
                style="@style/TextFieldTheme"
                android:inputType="numberDecimal"
                android:id="@+id/damage_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/damage_amount"
                tools:ignore="Autofill,LabelFor" />
            <EditText
                style="@style/TextFieldTheme"
                android:inputType="numberDecimal"
                android:id="@+id/damage_modifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/damage_modifier"
                tools:ignore="Autofill,LabelFor" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextFieldTheme"
                android:text="@string/damage_type"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextFieldTheme"
                    android:id="@+id/explosion"
                    android:text="@string/explosion"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/cut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextFieldTheme"
                    android:text="@string/cut"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextFieldTheme"
                    android:id="@+id/strike"
                    android:text="@string/strike"/>
                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextFieldTheme"
                    android:id="@+id/energy"
                    android:text="@string/energy"/>
            </RadioGroup>
            <EditText
                style="@style/TextFieldTheme"
                android:inputType="numberDecimal"
                android:id="@+id/armor_penetration_attack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/armor_penetration_attack"
                tools:ignore="Autofill,LabelFor"
                android:layout_marginBottom="@dimen/content_offset"/>
            <EditText
                style="@style/TextFieldTheme"
                android:inputType="numberDecimal"
                android:id="@+id/attack_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/attack_amount"
                tools:ignore="Autofill,LabelFor"
                android:layout_marginBottom="@dimen/content_offset"/>
            <EditText
                style="@style/TextFieldTheme"
                android:inputType="numberDecimal"
                android:id="@+id/hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hp"
                tools:ignore="Autofill,LabelFor"/>
            <TextView
                android:layout_marginBottom="@dimen/content_offset"
                android:layout_marginTop="@dimen/content_offset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextFieldTheme"
                android:text="@string/evasion"/>
            <EditText
                style="@style/TextFieldTheme"
                android:inputType="numberDecimal"
                android:id="@+id/evasion_skill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/evasion_skill_amount"
                tools:ignore="Autofill,LabelFor"/>
            <EditText
                style="@style/TextFieldTheme"
                android:inputType="numberDecimal"
                android:id="@+id/evasion_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/evasion_attack_amount"
                tools:ignore="Autofill,LabelFor"
                android:layout_marginBottom="@dimen/content_offset"/>
            <EditText
                style="@style/TextFieldTheme"
                android:inputType="numberDecimal"
                android:id="@+id/misfire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/misfire_possibility"
                tools:ignore="Autofill,LabelFor"/>
            <TextView
                android:layout_marginBottom="@dimen/content_offset"
                android:layout_marginTop="@dimen/content_offset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextFieldTheme"
                android:text="@string/critical_hit"/>
            <EditText
                style="@style/TextFieldTheme"
                android:inputType="numberDecimal"
                android:id="@+id/critical_ignorance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/critical_hit_ignorance"
                tools:ignore="Autofill,LabelFor"/>
            <EditText
                style="@style/TextFieldTheme"
                android:inputType="numberDecimal"
                android:id="@+id/critical_modifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/critical_hit_modifier"
                tools:ignore="Autofill,LabelFor"/>
            <TextView
                android:layout_marginBottom="@dimen/content_offset"
                android:layout_marginTop="@dimen/content_offset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextFieldTheme"
                android:text="@string/righteous_anger"/>
            <EditText
                style="@style/TextFieldTheme"
                android:inputType="numberDecimal"
                android:id="@+id/anger_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/righteous_anger_amount"
                android:text="@string/anger_default"
                tools:ignore="Autofill,LabelFor"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/can_use_anger"
                android:text="@string/can_use_anger"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/can_die_from_anger"
                android:text="@string/can_die_from_anger"/>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/save_squad"
        style="@style/BottomButton"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>